--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 			<version>11.2.0</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
+		
 		<!-- DataSource (HikariCP) -->
 		<dependency>
 			<groupId>com.zaxxer</groupId>
@@ -67,6 +73,10 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
 		</dependency>
 	</dependencies>
 
