--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,11 @@ hibernate.order_inserts = true
 hibernate.order_updates = true
 hibernate.jdbc.batch_versioned_data = true
 hibernate.jdbc.batch_size=100
-hibernate.jdbc.fatch_size=100
+hibernate.jdbc.fetch_size=100
 hibernate.show_sql=false
 hibernate.format_sql=false
 hibernate.use_sql_comments=false
 hibernate.id.new_generator_mapping=false
 hibernate.hbm2ddl.auto = update
 upload.pool.size=2
-dados.poll.size=2
+#dados.poll.size=2
